--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,7 @@ jobs:
     - C_COMPILER=clang-10
     - CXX_COMPILER=clang++-10
     - COMPILER_FLAGS='-fsanitize=address,undefined'
+    - DIAGNOSTIC_FLAGS='-Weverything -Werror'
     addons:
       apt:
         sources:
