--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ dist: bionic
 cache: ccache
 branches:
   except:
-    - master
     - /^(wip\/)?(appveyor|drone|gh\-actions|azure|circleci)(\-.+)?$/
 
 env:
@@ -19,6 +18,7 @@ env:
 jobs:
   include:
   - name: "gcc-9"
+    if: branch != master OR type == pull_request
     compiler: gcc-9
     env:
     - C_COMPILER=gcc-9
@@ -35,6 +35,7 @@ jobs:
         - g++-9
 
   - name: "clang-10"
+    if: branch != master OR type == pull_request
     compiler: clang-10
     env:
     - C_COMPILER=clang-10
@@ -50,6 +51,7 @@ jobs:
         - clang-10
 
   - name: "gcc-8 x86"
+    if: branch != master OR type == pull_request
     arch: amd64
     compiler: gcc-8
     env:
@@ -68,9 +70,11 @@ jobs:
         - binutils-i686-linux-gnu:i386
 
   - name: "aarch64"
+    if: branch != master OR type == pull_request
     arch: arm64
 
   - name: "ppc64le"
+    if: branch != master OR type == pull_request
     arch: ppc64le
     env:
     - ARCH_FLAGS="-mcpu=native"
@@ -81,11 +85,13 @@ jobs:
         - g++
 
   - name: "-DSIMDE_NO_SHUFFLE_VECTOR"
+    if: branch != master OR type == pull_request
     env:
     - COMPILER_FLAGS=-DSIMDE_NO_SHUFFLE_VECTOR
     - OPTIMIZATION_FLAGS=''
 
   - name: "armv8-a"
+    if: branch != master OR type == pull_request
     arch: arm64
     env:
     - C_COMPILER=arm-linux-gnueabihf-gcc
@@ -97,6 +103,7 @@ jobs:
     - sudo apt-get -y install crossbuild-essential-armhf libc6:armhf libstdc++6:armhf
 
   - name: "armv7-a"
+    if: branch != master OR type == pull_request
     arch: arm64
     env:
     - C_COMPILER=arm-linux-gnueabihf-gcc
@@ -108,6 +115,7 @@ jobs:
     - sudo apt-get -y install crossbuild-essential-armhf libc6:armhf libstdc++6:armhf
 
   - name: icc
+    if: branch != master OR type == pull_request
     compiler: icc
     env:
     - C_COMPILER=icc
@@ -124,6 +132,7 @@ jobs:
         - intel-oneapi-icc
 
   - name: "pgcc"
+    if: branch != master OR type == pull_request
     env:
     - C_COMPILER=pgcc
     - CXX_COMPILER=pgc++
@@ -134,6 +143,7 @@ jobs:
     - curl 'https://raw.githubusercontent.com/nemequ/pgi-travis/master/install-pgi.sh' | /bin/sh
 
   - name: "xlc"
+    if: branch != master OR type == pull_request
     arch: ppc64le
     install:
     - wget -q https://public.dhe.ibm.com/software/server/POWER/Linux/xl-compiler/eval/ppc64le/ubuntu/public.gpg -O- | sudo apt-key add -
@@ -148,9 +158,11 @@ jobs:
     - CXX_COMPILER=xlc++
 
   - name: osx
+    if: branch != master OR type == pull_request
     os: osx
 
   - name: msvc x86
+    if: branch != master OR type == pull_request
     os: windows
     env:
     - ARCH_FLAGS="/arch:AVX2"
@@ -159,6 +171,7 @@ jobs:
     - DIAGNOSTIC_FLAGS="/W4 /WX"
 
   - name: msvc x86_64
+    if: branch != master OR type == pull_request
     os: windows
     env:
     - ARCH_FLAGS="/arch:AVX2"
@@ -167,6 +180,7 @@ jobs:
     - DIAGNOSTIC_FLAGS="/W4 /WX"
 
   - name: msvc arm
+    if: branch != master OR type == pull_request
     os: windows
     env:
     - ARCH_FLAGS=""
@@ -176,14 +190,17 @@ jobs:
     - DIAGNOSTIC_FLAGS="/W4 /WX"
 
   - name: "gcc-7 amd64"
+    if: branch != master OR type == pull_request
     compiler: gcc
     arch: amd64
 
   - name: "clang-7 amd64"
+    if: branch != master OR type == pull_request
     arch: amd64
     compiler: clang
 
   - name: gcc-4.8
+    if: branch != master OR type == pull_request
     dist: trusty
     env:
     # Lots of -Wunused-but-set-variable false positives
@@ -196,6 +213,7 @@ jobs:
         - kalakris-cmake
 
   - name: s390x
+    if: branch != master OR type == pull_request
     arch: s390x
 
   - name: amalgamate
@@ -216,6 +234,7 @@ jobs:
       skip_cleanup: true
 
   - name: emscripten
+    if: branch != master OR type == pull_request
     compiler: emcc
     env:
     - ARCH_FLAGS="-msimd128"
