travis: allow emscripten to fail temporarily
The latest tot seems to have introduced a bug which causes the compiler
to crash when compiling SIMDe.

--- a/.travis.yml
+++ b/.travis.yml
@@ -261,7 +261,7 @@ jobs:
       jsvu --os=linux64 --engines=v8
 
   allow_failures:
-  # - name: emscripten    
+  - name: emscripten
 
 before_install:
 - |
