--- a/test/docker/Dockerfile.Ubuntu1604
+++ b/test/docker/Dockerfile.Ubuntu1604
@@ -1,9 +1,21 @@
 # xenial with gcc 5.4
 FROM ubuntu:16.04
-RUN apt-get update && apt-get install --no-install-recommends -y gcc g++ cmake make
+RUN apt-get update && apt-get install --no-install-recommends -y gcc g++ cmake make clang libxml2-utils ninja-build python3-pip python3-setuptools python3-wheel
 COPY . /simde
-WORKDIR /simde/test
-RUN mkdir -p build_ubuntu16.04
-WORKDIR /simde/test/build_ubuntu16.04
-RUN CC=/usr/bin/gcc CXX=/usr/bin/g++ cmake -DCMAKE_C_FLAGS="-Wall -Wextra -Werror -Werror=unused-but-set-variable" -DCMAKE_CXX_FLAGS="-Wall -Wextra -Werror -Werror=unused-but-set-variable"  .. \
- && make -j $(nproc) && ./run-tests
+# WORKDIR /simde/test
+# RUN mkdir -p /simde/test/build_ubuntu16.04_clang
+# WORKDIR /simde/test/build_ubuntu16.04_clang
+# RUN CC=/usr/bin/clang CXX=/usr/bin/clang++ cmake -DCMAKE_C_FLAGS="-Wall -Wextra -Werror -Werror=unused-but-set-variable" -DCMAKE_CXX_FLAGS="-Wall -Wextra -Werror -Werror=unused-but-set-variable"  .. \
+#  && make -j $(nproc) && ./run-tests
+# RUN mkdir -p /simde/test/build_ubuntu16.04_gcc
+# WORKDIR /simde/test/build_ubuntu16.04_gcc
+# RUN CC=/usr/bin/gcc CXX=/usr/bin/g++ cmake -DCMAKE_C_FLAGS="-Wall -Wextra -Werror -Werror=unused-but-set-variable" -DCMAKE_CXX_FLAGS="-Wall -Wextra -Werror -Werror=unused-but-set-variable"  .. \
+#  && make -j $(nproc) && ./run-tests
+
+WORKDIR /simde/
+RUN bash ./test/native-aliases.sh
+RUN mkdir -p /simde/test/build_ubuntu16.04_clang_native
+WORKDIR /simde/test/build_ubuntu16.04_clang_native
+RUN CC=/usr/bin/clang CXX=/usr/bin/clang++ cmake -DCMAKE_C_FLAGS="-Wall -Wextra -march=native -DSIMDE_ENABLE_NATIVE_ALIASES -DSIMDE_NATIVE_ALIASES_TESTING" -DCMAKE_CXX_FLAGS="-Wall -Wextra -march=native -DSIMDE_ENABLE_NATIVE_ALIASES -DSIMDE_NATIVE_ALIASES_TESTING"  .. \
+ && make && ./run-tests
+
