--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -102,6 +102,7 @@ set(TEST_SOURCES_C
   x86/avx512bw.c
   x86/avx512vl.c
   x86/avx512dq.c
+  x86/avx512cd.c
   x86/gfni.c
   x86/fma.c
   x86/svml.c
