travis: remove emscripten from allowed failures
Emscripten has been fixed; see
<https://github.com/emscripten-core/emscripten/issues/11176> for
details.

--- a/.travis.yml
+++ b/.travis.yml
@@ -277,8 +277,8 @@ jobs:
       npm install jsvu -g
       jsvu --os=linux64 --engines=v8
 
-  allow_failures:
-  - name: emscripten
+  # allow_failures:
+  # - name: emscripten
 
 before_install:
 - |
