--- a/test/docker/Dockerfile.s390x
+++ b/test/docker/Dockerfile.s390x
@@ -9,10 +9,12 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
   make \
   qemu-user-static
 COPY . /simde
-WORKDIR /simde
-RUN mkdir -p test/build_s390x_clang
+RUN mkdir -p /simde/test/build_s390x_clang
 WORKDIR /simde/test/build_s390x_clang
-RUN CC=/usr/bin/clang CXX=/usr/bin/clang++ cmake -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON -DCMAKE_C_FLAGS="-Wall -Wextra -Werror --target=s390x-linux-gnu -march=z196 -I/usr/s390x-linux-gnu/include" -DCMAKE_CXX_FLAGS="-Wall -Wextra -Werror --target=s390x-linux-gnu -march=z196 -I/usr/s390x-linux-gnu/include" ../ && \
+RUN CC=/usr/bin/clang CXX=/usr/bin/clang++ cmake -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON \
+  -DCMAKE_C_FLAGS="-Wall -Wextra -Werror --target=s390x-linux-gnu -march=z196 \
+  -I/usr/s390x-linux-gnu/include" -DCMAKE_CXX_FLAGS="-Wall -Wextra -Werror \
+  --target=s390x-linux-gnu -march=z196 -I/usr/s390x-linux-gnu/include" ../ && \
   make -j$(nproc)
 RUN QEMU_LD_PREFIX=/usr/s390x-linux-gnu/ /usr/bin/qemu-s390x-static ./run-tests
 RUN mkdir -p test/build_s390x_gnu
