Remove ALWAYS_BUILD_NATIVE_TESTS option.
We have changed what we consider native tests since this option was
introduced, and it no longer had the desired effect.  The "native"
tests used to only refer to using the corresponding native functions
to implement the SIMDe versions; i.e., _mm_add_ps to implement
simde_mm_add_ps.  However, we now consider any native architecture-
specific SIMD API to be "native".  For example, using vaddq_s32 to
implement simde_mm_add_ps.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Install APT Dependencies
       run: sudo add-apt-repository 'ppa:ubuntu-toolchain-r/test' && sudo apt-get update && sudo apt-get install -y ninja-build
     - name: Configure
-      run: cmake test -G "Ninja" -DCMAKE_BUILD_TYPE="Coverage" -DCMAKE_{C,CXX}_FLAGS="${{ matrix.isax }} -Wall -Wextra -Werror" -DALWAYS_BUILD_NATIVE_TESTS=ON -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON
+      run: cmake test -G "Ninja" -DCMAKE_BUILD_TYPE="Coverage" -DCMAKE_{C,CXX}_FLAGS="${{ matrix.isax }} -Wall -Wextra -Werror" -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON
     - name: Build
       run: cmake --build .
     - name: Test
@@ -54,7 +54,7 @@ jobs:
           | xargs curl -sL \
           | tar --strip-components 1 -jxvC sde
     - name: Configure
-      run: cmake test -G "Ninja" -DCMAKE_C_COMPILER="clang" -DCMAKE_CXX_COMPILER="clang++" -DCMAKE_BUILD_TYPE="Coverage" -DCMAKE_{C,CXX}_FLAGS="-march=${{ matrix.arch }} -Wall -Wextra -Werror" -DALWAYS_BUILD_NATIVE_TESTS=ON -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON
+      run: cmake test -G "Ninja" -DCMAKE_C_COMPILER="clang" -DCMAKE_CXX_COMPILER="clang++" -DCMAKE_BUILD_TYPE="Coverage" -DCMAKE_{C,CXX}_FLAGS="-march=${{ matrix.arch }} -Wall -Wextra -Werror" -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON
     - name: Build
       run: cmake --build .
     - name: Test
