travis: disable PGI build
I can't find a good way to get _mm256_shufflelo_epi8 to work; LLVM
is smart enough to optimize everything I try to the same problematic
opcode.

C++ hasn't worked for a long time, so we weren't getting much out of
PGI anyways.  I'm happy to re-enable this once PGI is fixed.
Hopefully with the next CE release I'll be able to re-enable it, but
since I'm having trouble logging into their forums again I can't
report the issue, so I'm not holding my breath.

--- a/.travis.yml
+++ b/.travis.yml
@@ -147,16 +147,16 @@ jobs:
         packages:
         - intel-oneapi-icc
 
-  - name: "pgcc"
-    if: branch != master OR type == pull_request
-    env:
-    - C_COMPILER=pgcc
-    - CXX_COMPILER=pgc++
-    - ARCH_FLAGS="-m64"
-    - BUILD_CPP_TESTS=OFF
-    - DIAGNOSTIC_FLAGS=
-    install:
-    - curl 'https://raw.githubusercontent.com/nemequ/pgi-travis/master/install-pgi.sh' | /bin/sh
+  # - name: "pgcc"
+  #   if: branch != master OR type == pull_request
+  #   env:
+  #   - C_COMPILER=pgcc
+  #   - CXX_COMPILER=pgc++
+  #   - ARCH_FLAGS="-m64"
+  #   - BUILD_CPP_TESTS=OFF
+  #   - DIAGNOSTIC_FLAGS=
+  #   install:
+  #   - curl 'https://raw.githubusercontent.com/nemequ/pgi-travis/master/install-pgi.sh' | /bin/sh
 
   - name: "xlc"
     if: branch != master OR type == pull_request
