--- a/.travis.yml
+++ b/.travis.yml
@@ -261,7 +261,7 @@ jobs:
     - BUILD_WRAPPER=emmake
     - EXECUTABLE_EXTENSION=.js
     - TEST_WRAPPER="${HOME}/.jsvu/v8 --experimental-wasm-simd"
-    - OPTIMIZATION_FLAGS="-O3 -s SIMD=1"
+    - OPTIMIZATION_FLAGS="-O3"
     addons:
       apt:
         packages:
