Add automatic deployment to new simde-no-tests git repository
The tests are getting pretty massive, and people are understandably
reticent to add such a massive submodule.  This new repository is
intended to allow people to use a submodule or subtree of only the
implementations, which is much smaller (though still fairly large).

--- a/.travis.yml
+++ b/.travis.yml
@@ -249,6 +249,27 @@ jobs:
       github_token: $GITHUB_TOKEN
       skip_cleanup: true
       keep_history: true
+      name: SIMDe
+      email: simde@googlegroups.com
+      on:
+        repo: nemequ/simde
+
+  - name: push-to-no-tests
+    if: branch = master AND type != pull_request
+    script:
+    - tail -n +4 .no-test-readme.md > simde/README.md
+    deploy:
+      provider: pages
+      target_branch: master
+      repo: nemequ/simde-no-tests
+      github_token: $GITHUB_TOKEN
+      local_dir: simde
+      skip_cleanup: true
+      keep_history: true
+      name: SIMDe
+      email: simde@googlegroups.com
+      on:
+        repo: nemequ/simde
 
   - name: emscripten
     if: branch != master OR type == pull_request
