neon/pmin, neon/sub: fix portable implementations of most functions
This also adds /arm to ctest so issues like this are picked up in CI
in the future.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -162,6 +162,7 @@ foreach(tst
       "/x86/avx512dq"
       "/x86/gfni"
       "/x86/svml"
+      "/arm"
     )
   add_test(NAME "${tst}/${variant}" COMMAND ${CMAKE_CROSSCOMPILING_EMULATOR} $<TARGET_FILE:run-tests> "${tst}")
 endforeach()
