Add @seanptmaher as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -195,6 +195,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "seanptmaher",
+      "name": "Sean Maher",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/39571964?v=4",
+      "profile": "https://github.com/seanptmaher",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
