neon: add and, eor and orr intrinsics
Fixes #357

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -107,7 +107,10 @@ set(TEST_SOURCES_C
   x86/svml.c
 
   arm/neon/add.c
+  arm/neon/and.c
+  arm/neon/eor.c
   arm/neon/min.c
+  arm/neon/orr.c
   arm/neon/pmin.c
   arm/neon/sub.c)
 
