--- a/.travis.yml
+++ b/.travis.yml
@@ -258,6 +258,7 @@ jobs:
     - TEST_WRAPPER="${HOME}/.jsvu/v8 --experimental-wasm-simd"
     - OPTIMIZATION_FLAGS="-O3"
     - TEST_ARG_SEPARATOR="--"
+    - DIAGNOSTIC_FLAGS='-Weverything'
     addons:
       apt:
         packages:
