neon: Implementation of get_high and get_low
These are not fast, but I couldn't really figure out a way to do this
fast on SSE, and Wasm doesn't support 64-bit vectors, so I think we
might be stuck with slow scalar fallbacks (I'm not sure how slow
these are, though)

neon: Remove comments, add get_high and get_low to cmake

neon: add get_high and get_low to meson.build

add files to neon.h header

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -107,6 +107,8 @@ set(TEST_SOURCES_C
   x86/svml.c
 
   arm/neon/add.c
+  arm/neon/get_high.c
+  arm/neon/get_low.c
   arm/neon/min.c
   arm/neon/pmin.c
   arm/neon/sub.c)
