travis: remove BUILD_TYPE, pass -O2 to ppc64 gcc
We have long since given up an BUILD_TYPE='Coverage'; Meson's support
for coverage builds actually works, so we use that instead.  We just
need to port the Travis builds over to Meson.

As for -O2, hopefully this fixes the PPC failures.  I'm working on a
reduced test case for GCC, and it looks like optimization fixes the
issue.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,6 @@ branches:
 
 env:
   global:
-  - BUILD_TYPE="Coverage"
   - ARCH_FLAGS="-march=native"
   - BUILD_CPP_TESTS=ON
   - CMAKE_GENERATOR='Ninja'
@@ -99,6 +98,7 @@ jobs:
     - ARCH_FLAGS="-mcpu=native"
     - C_COMPILER=gcc-10
     - CXX_COMPILER=g++-10
+    - OPTIMIZATION_FLAGS=-O2
     addons:
       apt:
         packages:
@@ -361,7 +361,6 @@ script:
 - |
   ${CONFIGURE_WRAPPER} cmake .. \
     -G "${CMAKE_GENERATOR}" \
-    -DCMAKE_BUILD_TYPE="${BUILD_TYPE}" \
     -DBUILD_CPP_TESTS=${BUILD_CPP_TESTS} \
     -DCMAKE_CROSSCOMPILING_EMULATOR="${TEST_WRAPPER}" \
     -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON \
