--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -113,6 +113,7 @@ set(TEST_SOURCES_C
   arm/neon/get_high.c
   arm/neon/get_low.c
   arm/neon/min.c
+  arm/neon/mul.c
   arm/neon/orr.c
   arm/neon/pmin.c
   arm/neon/sub.c)
