neon: Add shr_n and shrq_n intrinsics

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -114,6 +114,7 @@ set(TEST_SOURCES_C
   arm/neon/orr.c
   arm/neon/pmin.c
   arm/neon/shl.c
+  arm/neon/shr.c
   arm/neon/sub.c)
 
 set(TEST_RUNNER_SOURCES
