--- a/.travis.yml
+++ b/.travis.yml
@@ -254,7 +254,7 @@ jobs:
     - CONFIGURE_WRAPPER=emcmake
     - BUILD_WRAPPER=emmake
     - EXECUTABLE_EXTENSION=.js
-    - TEST_WRAPPER="${HOME}/.jsvu/v8 --experimental-wasm-simd --wasm-simd-post-mvp"
+    - TEST_WRAPPER="${HOME}/.jsvu/v8 --experimental-wasm-simd"
     - OPTIMIZATION_FLAGS="-O3"
     - TEST_ARG_SEPARATOR="--"
     - DIAGNOSTIC_FLAGS='-Weverything'
