neon/padd: implement vpadd* functions
Fixes #370

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -117,6 +117,7 @@ set(TEST_SOURCES_C
   arm/neon/mul.c
   arm/neon/mull.c
   arm/neon/orr.c
+  arm/neon/padd.c
   arm/neon/pmin.c
   arm/neon/shl_n.c
   arm/neon/shr_n.c
